--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -14,3 +14,11 @@
 .screen-header__icons span {
   margin-left: 25px;
 }
+
+.screen-header__icons span span {
+  margin: 0px;
+}
+
+.screen-icon__with-red-dot {
+  position: relative;
+}
