--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -17,7 +17,7 @@
 /* friends-screen은 나의 프로필과, 친구들을 모두 포함하는 창이다 */
 
 .friends-screen__channel {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: var(--main-border);
   margin-top: 20px;
   padding-top: 15px;
 }
