--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -22,3 +22,16 @@
 .screen-icon__with-red-dot {
   position: relative;
 }
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 1s linear infinite;
+}
