--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -19,12 +19,24 @@
   z-index: 1;
 }
 
+@keyframes fadeIn {
+  from {
+    transform: translateY(15px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
 .main-chat {
-  margin-top: 100px;
+  margin-top: 160px;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 500vh;
+  animation: fadeIn 0.8s linear;
 }
 
 .chat__timestamp {
@@ -104,6 +116,7 @@
   padding: 5px 25px;
   align-items: center;
   box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
 }
 
 .reply i {
@@ -156,4 +169,26 @@
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 20px;
   padding-left: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.reply .reply__column:first-child,
+.reply .fa-smile-wink,
+.reply button {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile-wink,
+.reply:focus-within button {
+  opacity: 0;
+}
+
+.reply input:focus {
+  width: 92vw;
+  transform: translateX(-13%) translateY(-50px);
+}
+
+.reply:focus-within {
+  transform: translateY(50px);
 }
