--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,11 @@
 @import "components/badge.css";
 @import "components/icon-row.css";
 @import "components/alt-screen-header.css";
+@import "components/no-mobile.css";
 
 /*Screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
-@import "screens/chats.css";
 @import "screens/find.css";
 @import "screens/more.css";
 @import "screens/settings.css";
@@ -24,6 +24,9 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding-top: 20px;
   color: #2e363e;
+  /*background-image: url("screens/kakao_winter_screen.jpg");
+  background-size: 100vw 100vh;
+  color: white;*/
 }
 
 .main-screen {
