--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -42,10 +42,25 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: whitesmoke;
+  display: flex;
+}
+
+.chat-user-component .user-component__column:last-child {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+
+.user-profile-music {
+  border: 2px solid whitesmoke;
+  padding: 10px;
+  border-radius: 15px;
+  align-items: center;
+}
+
+.user-profile-music i {
+  margin-right: 4px;
 }
 
 .user-component__subtitle .fa-exclamation-circle {
