--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -5,10 +5,11 @@
   padding: 14px 0px;
   margin-bottom: 12px;
   margin-top: -10px;
+  color: black;
 }
 
 #friends-display-link i {
-  color: rgba(0, 0, 0, 0.3);
+  color: gold;
 }
 
 .friends-screen {
@@ -40,7 +41,6 @@
 }
 
 #splash-screen {
-  background-color: var(--yellow);
   position: absolute;
   height: 100vh;
   width: 100vw;
@@ -48,7 +48,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 128px;
+  font-size: 120px;
   animation: hideSplashScreen 0.4s ease-in-out forwards;
   animation-delay: 1.5s;
+}
+
+@keyframes shiningicon_friends {
+  25% {
+    color: gold;
+  }
+  50% {
+    color: black;
+  }
+  75% {
+    color: gold;
+  }
+}
+
+.friends_i {
+  color: gold;
+  animation: shiningicon_friends 2.5s ease-in-out infinite;
 }
