--- a/css/screens/settings.css
+++ b/css/screens/settings.css
@@ -1,6 +1,6 @@
 .settings__setting {
   padding: 20px 0px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  border-bottom: 1px solid rgba(245, 245, 245, 0.2);
   font-size: 20px;
   font-weight: 400;
   display: flex;
@@ -11,9 +11,9 @@
 .settings__setting-column i {
   margin-right: 18px;
   font-size: 22px;
-  color: rgba(0, 0, 0, 0.6);
+  color: whitesmoke;
 }
 
 .settings__setting-column:last-child span {
-  color: var(--gray-color-font);
+  color: rgba(245, 245, 245, 0.5);
 }
