--- a/css/styles.css
+++ b/css/styles.css
@@ -24,11 +24,62 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding-top: 20px;
   color: #2e363e;
-  /*background-image: url("screens/kakao_winter_screen.jpg");
+  background-image: url("screens/kakao_winter_screen.jpg");
   background-size: 100vw 100vh;
-  color: white;*/
+  color: whitesmoke;
 }
 
 .main-screen {
   padding: 0px var(--horizontal-space);
+}
+
+@keyframes shiningicon_chats {
+  25% {
+    color: rgb(35, 167, 35);
+  }
+  50% {
+    color: black;
+  }
+  75% {
+    color: rgb(35, 167, 35);
+  }
+}
+
+.chats_i {
+  color: rgb(35, 167, 35);
+  animation: shiningicon_chats 2.5s ease-in-out infinite;
+}
+
+@keyframes shiningicon_find {
+  25% {
+    color: tomato;
+  }
+  50% {
+    color: black;
+  }
+  75% {
+    color: tomato;
+  }
+}
+
+.find_i {
+  color: tomato;
+  animation: shiningicon_find 2.5s ease-in-out infinite;
+}
+
+@keyframes shiningicon_more {
+  25% {
+    color: rgb(193, 219, 230);
+  }
+  50% {
+    color: black;
+  }
+  75% {
+    color: rgb(193, 219, 230);
+  }
+}
+
+.more_i {
+  color: rgb(193, 219, 230);
+  animation: shiningicon_more 2.5s ease-in-out infinite;
 }
