--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,11 +1,9 @@
 #chat-screen {
   background-color: #abc1d1;
-  height: 500vh;
 }
 
 #chat-screen .status-bar,
 #chat-screen .alt-header {
-  background-color: #abc1d1;
   position: fixed;
   box-sizing: border-box;
   width: 100%;
@@ -35,13 +33,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 500vh;
   animation: fadeIn 0.8s linear;
 }
 
 .chat__timestamp {
   color: rgba(255, 255, 255, 0.6);
-  background-color: #92a4b2;
+  background-color: rgba(245, 245, 245, 0.3);
   text-align: center;
   padding: 10px 15px;
   font-size: 15px;
@@ -76,7 +73,7 @@
 }
 
 .message__bubble {
-  background-color: white;
+  background-color: var(--christmas-green);
   padding: 12px 12px;
   border-radius: 12px;
   border-top-left-radius: 0px;
@@ -95,11 +92,11 @@
 }
 
 .message-row--own .message__bubble {
-  background-color: var(--yellow);
   border-top-left-radius: 12px;
   border-top-right-radius: 0px;
   margin-right: 0px;
   margin-left: 7px;
+  background-color: tomato;
 }
 
 .message-row--own .message__info {
@@ -110,7 +107,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: white;
+  background-color: var(--night-blue);
   display: flex;
   justify-content: space-between;
   padding: 5px 25px;
@@ -146,7 +143,7 @@
 }
 
 .reply__column button {
-  background-color: var(--yellow);
+  background-color: tomato;
   border: none;
   width: 30px;
   height: 30px;
@@ -166,7 +163,7 @@
   width: 100%;
   height: 30px;
   border: var(--main-border);
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: white;
   border-radius: 20px;
   padding-left: 10px;
   transition: all 0.3s ease-in-out;
@@ -176,6 +173,18 @@
 .reply .fa-smile-wink,
 .reply button {
   transition: opacity 0.3s ease-in-out;
+}
+
+.reply__column .fa-plus-square {
+  color: white;
+}
+
+.reply__column .fa-smile-wink {
+  color: var(--christmas-green);
+}
+
+.reply__column .fa-arrow-up {
+  color: white;
 }
 
 .reply:focus-within .reply__column:first-child,
