--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -53,7 +53,7 @@
 }
 
 #login-form input[type="submit"] {
-  background-color: var(--yellow);
+  background-color: var(--light-white);
   cursor: pointer;
   padding: 20px 0px;
   border-radius: 5px;
