--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,10 @@
 :root {
   --yellow: #f7e100;
   --horizontal-space: 35px;
-  --main-border: 1px solid rgba(0, 0, 0, 0.1);
+  --main-border: 1px solid rgba(245, 245, 245, 0.4);
   --gray-color-font: rgba(0, 0, 0, 0.4);
+  --light-white: rgba(245, 245, 245, 0.7);
+  --light-yellowgreen: rgba(154, 205, 50, 0.9);
+  --night-blue: #3c4766;
+  --christmas-green: rgb(35, 167, 35);
 }
