--- a/css/components/icon-row.css
+++ b/css/components/icon-row.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 25%;
 }
 
 .icon-row__icons i {
@@ -15,4 +16,248 @@
 
 .icon-row span {
   margin-top: 15px;
+}
+
+.find-icon-row .icon-row__icons:nth-child(2) span:last-child {
+  margin-top: 3px;
+}
+
+.icon-row-collection {
+  padding-top: 10px;
+}
+
+.icon-row-collection .icon-row__icons {
+  margin: 0px 10px;
+}
+
+@keyframes qrcodeanimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    color: black;
+    transform: scale(1.3);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.find-icon-row .icon-row__icons:first-child:hover i {
+  animation: qrcodeanimation 1.5s linear infinite;
+}
+
+@keyframes contactsanimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    color: rgb(207, 138, 9);
+    transform: scale(1.3);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.find-icon-row .icon-row__icons:nth-child(2):hover i {
+  animation: contactsanimation 1.5s linear infinite;
+}
+
+@keyframes idanimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    color: rgb(245, 223, 181);
+    transform: scale(1.3);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.find-icon-row .icon-row__icons:nth-child(3):hover i {
+  animation: idanimation 1.5s linear infinite;
+}
+
+@keyframes inviteanimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    color: rgb(197, 179, 15);
+    transform: scale(1.3);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.find-icon-row .icon-row__icons:last-child:hover i {
+  animation: inviteanimation 1.5s linear infinite;
+}
+
+@keyframes calendarColor {
+  0% {
+    transform: none;
+    color: white;
+  }
+  50% {
+    transform: rotateY(360deg);
+    color: tomato;
+  }
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+
+.icon-row-collection .icon-row__icons:hover .fa-calendar-check {
+  animation: calendarColor 2s ease-in-out infinite;
+}
+
+@keyframes briefcaseColor {
+  0% {
+    transform: none;
+    color: white;
+  }
+  50% {
+    transform: rotateY(360deg);
+    color: black;
+  }
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+
+.icon-row-collection .icon-row__icons:hover .fa-briefcase {
+  animation: briefcaseColor 2s ease-in-out infinite;
+}
+
+@keyframes smileColor {
+  0% {
+    transform: none;
+    color: white;
+  }
+  50% {
+    transform: rotateZ(360deg);
+    color: gold;
+  }
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+
+.icon-row-collection .icon-row__icons:hover .fa-smile-wink {
+  animation: smileColor 2s ease-in-out infinite;
+}
+
+@keyframes themeColor {
+  0% {
+    transform: none;
+    color: white;
+  }
+  50% {
+    transform: rotateZ(360deg);
+    color: rgb(196, 159, 127);
+  }
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+
+.icon-row-collection .icon-row__icons:hover .fa-palette {
+  animation: themeColor 2s ease-in-out infinite;
+}
+
+@keyframes accountColor {
+  0% {
+    transform: none;
+    color: white;
+  }
+  50% {
+    transform: rotateY(360deg);
+    color: rgb(101, 187, 144);
+  }
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+
+.icon-row-collection .icon-row__icons:hover .fa-dollar-sign {
+  animation: accountColor 2s ease-in-out infinite;
+}
+
+@keyframes openchatColor {
+  0% {
+    transform: none;
+    color: white;
+  }
+  50% {
+    transform: rotateY(360deg);
+    color: var(--yellow);
+  }
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+
+.icon-row-collection .icon-row__icons:hover .fa-comments {
+  animation: openchatColor 2s ease-in-out infinite;
+}
+
+@keyframes giftColor {
+  0% {
+    transform: none;
+    color: white;
+  }
+  50% {
+    transform: rotateY(360deg);
+    color: tomato;
+  }
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+
+.icon-row-collection .icon-row__icons:hover .fa-gift {
+  animation: giftColor 2s ease-in-out infinite;
+}
+
+@keyframes shoppingcartColor {
+  0% {
+    transform: none;
+    color: white;
+  }
+  10% {
+    transform: translateX(10px);
+    color: rgb(0, 153, 255);
+  }
+  50% {
+    transform: translateX(0px);
+    color: rgb(0, 153, 255);
+  }
+  90% {
+    transform: translateX(-10px);
+    color: rgb(0, 153, 255);
+  }
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+
+.icon-row-collection .icon-row__icons:hover .fa-shopping-cart {
+  animation: shoppingcartColor 2s linear infinite;
 }
