--- a/css/styles.css
+++ b/css/styles.css
@@ -23,9 +23,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding-top: 20px;
+  height: 100vh;
   color: #2e363e;
   background-image: url("screens/kakao_winter_screen.jpg");
-  background-size: 100vw 100vh;
+  background-size: cover;
   color: whitesmoke;
 }
 
